@@ -6,34 +6,42 @@ import net.minecraftforge.client.extensions.common.IClientItemExtensions;
 import net.minecraftforge.api.distmarker.OnlyIn;
 import net.minecraftforge.api.distmarker.Dist;
 
+import net.minecraft.world.level.Level;
 import net.minecraft.world.item.crafting.Ingredient;
+import net.minecraft.world.item.TooltipFlag;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ArmorMaterial;
 import net.minecraft.world.item.ArmorItem;
+import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.sounds.SoundEvent;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.network.chat.Component;
 import net.minecraft.client.model.geom.ModelPart;
 import net.minecraft.client.model.HumanoidModel;
 import net.minecraft.client.Minecraft;
 
+import net.mcreator.lowlandsclothing.procedures.FurnacemasteramorChestplateTickEventProcedure;
 import net.mcreator.lowlandsclothing.init.LowlandsClothingModItems;
-import net.mcreator.lowlandsclothing.client.model.Modelfurnace_master_armor;
+import net.mcreator.lowlandsclothing.client.model.Modelfurnace_master_armor_v01;
 
 import java.util.function.Consumer;
 import java.util.Map;
+import java.util.List;
 import java.util.Collections;
+
+import com.google.common.collect.Iterables;
 
 public abstract class FurnacemasteramorItem extends ArmorItem {
 	public FurnacemasteramorItem(ArmorItem.Type type, Item.Properties properties) {
 		super(new ArmorMaterial() {
 			@Override
 			public int getDurabilityForType(ArmorItem.Type type) {
-				return new int[]{13, 15, 16, 11}[type.getSlot().getIndex()] * 17;
+				return new int[]{13, 15, 16, 11}[type.getSlot().getIndex()] * 18;
 			}
 
 			@Override
@@ -84,9 +92,9 @@ public abstract class FurnacemasteramorItem extends ArmorItem {
 				@Override
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("head", new Modelfurnace_master_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm",
-									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
+							Map.of("head", new Modelfurnace_master_armor_v01(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor_v01.LAYER_LOCATION)).Head, "hat",
+									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
@@ -113,10 +121,12 @@ public abstract class FurnacemasteramorItem extends ArmorItem {
 				@Override
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modelfurnace_master_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor.LAYER_LOCATION)).Body,
-							"left_arm", new Modelfurnace_master_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor.LAYER_LOCATION)).LeftArm, "right_arm",
-							new Modelfurnace_master_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
-							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
+							Map.of("body", new Modelfurnace_master_armor_v01(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor_v01.LAYER_LOCATION)).Body, "left_arm",
+									new Modelfurnace_master_armor_v01(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor_v01.LAYER_LOCATION)).LeftArm, "right_arm",
+									new Modelfurnace_master_armor_v01(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor_v01.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+									"hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
+									new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
 					armorModel.young = living.isBaby();
@@ -126,8 +136,22 @@ public abstract class FurnacemasteramorItem extends ArmorItem {
 		}
 
 		@Override
+		public void appendHoverText(ItemStack itemstack, Level level, List<Component> list, TooltipFlag flag) {
+			super.appendHoverText(itemstack, level, list, flag);
+			list.add(Component.literal("Creates an area of light around the player when full armor is equiped ."));
+		}
+
+		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
 			return "lowlands_clothing:textures/models/armor/furnace_master_armor_layer_1.png";
+		}
+
+		@Override
+		public void inventoryTick(ItemStack itemstack, Level world, Entity entity, int slot, boolean selected) {
+			super.inventoryTick(itemstack, world, entity, slot, selected);
+			if (entity instanceof Player player && Iterables.contains(player.getArmorSlots(), itemstack)) {
+				FurnacemasteramorChestplateTickEventProcedure.execute(world, entity.getX(), entity.getY(), entity.getZ(), entity);
+			}
 		}
 	}
 
@@ -143,10 +167,10 @@ public abstract class FurnacemasteramorItem extends ArmorItem {
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new Modelfurnace_master_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor.LAYER_LOCATION)).LeftLeg, "right_leg",
-									new Modelfurnace_master_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
-									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+							Map.of("left_leg", new Modelfurnace_master_armor_v01(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor_v01.LAYER_LOCATION)).LeftLeg, "right_leg",
+									new Modelfurnace_master_armor_v01(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor_v01.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+									"hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm",
+									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
 					armorModel.young = living.isBaby();
@@ -173,10 +197,10 @@ public abstract class FurnacemasteramorItem extends ArmorItem {
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new Modelfurnace_master_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor.LAYER_LOCATION)).LeftLeg, "right_leg",
-									new Modelfurnace_master_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
-									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+							Map.of("left_leg", new Modelfurnace_master_armor_v01(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor_v01.LAYER_LOCATION)).LeftLeg, "right_leg",
+									new Modelfurnace_master_armor_v01(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfurnace_master_armor_v01.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+									"hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm",
+									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
 					armorModel.young = living.isBaby();
